Issue with viewing site on another laptop, carousel indicator position shifted up when it was supposed to stay in place when viewing on different screen sizes.

--- a/css/brain.css
+++ b/css/brain.css
@@ -215,7 +215,7 @@
       margin-top: 3em; }
   #trending .pind {
     position: relative;
-    top: 62vh; }
+    top: 44em; }
     #trending .pind li.active {
       background-color: red; }
     #trending .pind li {
