--- a/css/src/trending.scss
+++ b/css/src/trending.scss
@@ -73,7 +73,7 @@
 
   .pind {
     position: relative;
-    top: 62vh;
+    top: 44em;
     // min-height: 50vh;
 
     li.active {
